gke/nginx-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: nginx
  name: nginx
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: nginx
    spec:
      containers:
      -
        image: nginx
        name: nginx
        volumeMounts:
          - name: config
            mountPath:  /etc/nginx/nginx.conf
            subPath: nginx.conf
        ports:
          - containerPort: 80
        resources: {}
      restartPolicy: Always
      volumes:
        - name: config
          configMap:
            name: config
status: {}
