gke/postgresql-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: db
  name: db
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: db
    spec:
      containers:
       -
        image: postgres:9.4
        name: db
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: db-data
        ports:
          - containerPort: 5432
        resources: {}
      restartPolicy: Always
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: claim
status: {}
