gke/app-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: app
  name: app
spec:
  type: NodePort
  ports:
  - name: "9090"
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    service: app
status:
  loadBalancer: {}
