gke/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: nginx
  name: nginx
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    service: nginx
status:
  loadBalancer: {}
