gke/postgresql-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: db
  name: db
spec:
  type: NodePort
  ports:
  - port: 5432
    protocol: TCP
  selector:
    service: db
status:
  loadBalancer: {}
