gke/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
spec:
  backend:
    serviceName: nginx
    servicePort: 80
